320492: Form editor improvement: Keyboard shortcuts for anchoring/grouping
Case: 320492